<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="launcherDialer">Phone</string>
    <string name="contactStorageToast">ContactStorage is not available!</string>
    <string name="people">People</string>
    <string name="contactsList">Contacts</string>
    <string name="shortcutContact">Contact</string>
    <string name="shortcutDialContact">Direct dial</string>
    <string name="shortcutMessageContact">Direct message</string>
    <string name="shortcutActivityTitle">Choose a contact shortcut</string>
    <string name="callShortcutActivityTitle">Choose a number to call</string>
    <string name="messageShortcutActivityTitle">Choose a number to message</string>
    <string name="contactPickerActivityTitle">Choose a contact</string>
    <string name="starredList">Starred</string>
    <string name="frequentList">Frequent</string>
    <string name="strequentList">Favorites</string>
    <string name="viewContactTitle">Contact details</string>
    <string name="viewContactDesription">View contact</string>
    <string name="editContactDescription">Edit contact</string>
    <string name="insertContactDescription">Create contact</string>
    <string name="editGroupDescription">Edit group</string>
    <string name="insertGroupDescription">Create group</string>
    <string name="contactDetailAbout">About</string>
    <string name="contactDetailUpdates">Updates</string>
    <string name="searchHint">Search contacts</string>
    <string name="menu_search">Search</string>
    <string name="menu_newContact">New contact</string>
    <string name="menu_viewContact">View contact</string>
    <string name="menu_callNumber">Call <xliff:g id="number">%s</xliff:g></string>
    <string name="menu_noContact">No designated contact</string>
    <string name="menu_addStar">Add to favorites</string>
    <string name="menu_removeStar">Remove from favorites</string>
    <string name="menu_editContact">Edit</string>
    <string name="menu_deleteContact">Delete</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_create_contact_shortcut">Place on Home screen</string>
    <string name="menu_call">Call contact</string>
    <string name="menu_sendSMS">Text contact</string>
    <string name="menu_splitAggregate">Separate</string>
    <string name="menu_editGroup">Edit</string>
    <string name="menu_deleteGroup">Delete</string>
    <string name="menu_new_contact_action_bar">New</string>
    <string name="menu_new_group_action_bar">New</string>
    <string name="splitConfirmation_title">Separate contact?</string>
    <string name="splitConfirmation">This contact will be separated into multiple contacts.</string>
    <string name="menu_joinAggregate">Join</string>
    <string name="titleJoinContactDataWith">Join contacts</string>
    <string name="blurbJoinContactDataWith">Choose the contact you want to join with <xliff:g id="name">%s</xliff:g>:</string>
    <string name="showAllContactsJoinItem">Show all contacts</string>
    <string name="separatorJoinAggregateSuggestions">Suggested contacts</string>
    <string name="separatorJoinAggregateAll">All contacts</string>
    <string name="contactsJoinedMessage">Contacts joined</string>
    <string name="deleteConfirmation_title">Delete contact?</string>
    <string name="importConfirmation_title">Import contact?</string>
    <string name="menu_set_ring_tone">Set ringtone</string>
    <string name="menu_redirect_calls_to_vm">All calls to voicemail</string>
    <string name="readOnlyContactWarning">You can\'t delete contacts from read-only accounts, but you can hide them in your contacts lists.</string>
    <string name="readOnlyContactDeleteConfirmation">This contact contains information from multiple accounts. Information from read-only accounts will be hidden in your contacts lists, not deleted.</string>
    <string name="multipleContactDeleteConfirmation">Deleting this contact will delete information from multiple accounts.</string>
    <string name="deleteConfirmation">This contact will be deleted.</string>
    <string name="menu_done">Done</string>
    <string name="menu_doNotSave">Cancel</string>
    <string name="menu_discard">Discard</string>
    <string name="label_notes">Notes</string>
    <string name="label_sip_address">Internet call</string>
    <string name="ghostData_company">Company</string>
    <string name="ghostData_title">Title</string>
    <string name="invalidContactMessage">The contact doesn\'t exist.</string>
    <string name="createContactShortcutSuccessful">Contact widget added to Home screen.</string>
    <string name="pickerNewContactHeader">Create new contact</string>
    <string name="pickerNewContactText">Create new contact</string>
    <string name="phoneLabelsGroup">Phone</string>
    <string name="emailLabelsGroup">Email</string>
    <string name="imLabelsGroup">IM</string>
    <string name="postalLabelsGroup">Address</string>
    <string-array name="otherLabels">
        
        <item>Organization</item>
        
        <item>Note</item>
    </string-array>
    <string name="photoPickerNotFoundText" product="default">No pictures are available on the phone.</string>
    <string name="attach_photo_dialog_title">Contact photo</string>
    <string name="customLabelPickerTitle">Custom label name</string>
    <string name="send_to_voicemail_checkbox">Send calls directly to voicemail</string>
    <string name="removePhoto">Remove photo</string>
    <string name="noContacts">No contacts.</string>
    <string name="noGroups">No groups.</string>
    <string name="noAccounts">To create groups you need an account.</string>
    <string name="noMatchingContacts">No matching contacts found.</string>
    <string name="noContactsWithPhoneNumbers">No contacts with phone numbers.</string>
    <string name="emptyGroup">No people in this group.</string>
    <string name="addPeopleToGroup">To add some, edit the group.</string>
    <string name="savingContact">Saving contact\u2026</string>
    <string name="savingDisplayGroups">Saving display options\u2026</string>
    <string name="contactSavedToast">Contact saved.</string>
    <string name="contactDeletedToast">Contact deleted.</string>
    <string name="contactSavedErrorToast">Couldn\'t save contact changes.</string>
    <string name="contactSavedToSimCardError">Error, Loading Sim Contacts.</string>
    <string name="airplane_mode_on">Error, Airplane mode is on.</string>
    <string name="number_anr_too_long">Error, Number is too long.</string>
    <string name="number_anr_full">Error, Number is full, the second number will not be saved.</string>
    <string name="email_address_full">Error, Email is full, Email will not be saved.</string>
    <string name="email_address_too_long">Error, Email Address is too long.</string>
    <string name="sim_card_full">Sim Card is full.</string>
    <string name="tag_too_long">Error, Contact name is too long.</string>
    <string name="no_phone_number">Please insert phone number.</string>
    <string name="no_name">Please insert name.</string>
    <string name="invalid_phone_number">Error, Number is invalid.</string>
    <string name="groupSavedToast">Group saved.</string>
    <string name="groupSavedErrorToast">Couldn\'t save group changes.</string>
    <plurals name="listTotalPhoneContacts">
        <item quantity="one">1 contact with phone number</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> contacts with phone numbers</item>
    </plurals>
    <string name="listTotalPhoneContactsZero">No contacts with phone numbers</string>
    <plurals name="listTotalAllContacts">
        <item quantity="one">1 contact</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> contacts</item>
    </plurals>
    <string name="listTotalAllContactsZero">No contacts.</string>
    <string name="listTotalAllContactsZeroCustom">No visible contacts.</string>
    <string name="listTotalAllContactsZeroStarred">No favorites.</string>
    <string name="listTotalAllContactsZeroGroup">No contacts in <xliff:g id="name" example="Friends">%s</xliff:g></string>
    <string name="listAllContactsInAccount">Contacts in <xliff:g id="name" example="abc@gmail.com">%s</xliff:g></string>
    <string name="listSingleContact">Single contact</string>
    <string name="listCustomView">Contacts in custom view</string>
    <plurals name="listFoundAllContacts">
        <item quantity="one">1 found</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> found</item>
    </plurals>
    <string name="foundTooManyContacts">More than <xliff:g id="count">%d</xliff:g> found.</string>
    <string name="listFoundAllContactsZero">No contacts</string>
    <plurals name="searchFoundContacts">
        <item quantity="one">1 found</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> found</item>
    </plurals>
    <string name="contactsAllLabel">All contacts</string>
    <string name="contactsGroupsLabel">Groups</string>
    <string name="contactsFavoritesLabel">Favorites</string>
    <string name="dialerAllContactsLabel">Favorites and all contacts</string>
    <string name="dialerIconLabel">Phone</string>
    <string name="recentCallsIconLabel">Call log</string>
    <string name="menu_sendTextMessage">Send text message</string>
    <string name="recentCalls_callNumber">Call <xliff:g id="name">%s</xliff:g></string>
    <string name="recentCalls_editNumberBeforeCall">Edit number before call</string>
    <string name="videocall">Video call</string>
    <string name="recentCalls_addToContact">Add to contacts</string>
    <string name="recentCalls_removeFromRecentList">Remove from call log</string>
    <string name="recentCalls_deleteAll">Clear call log</string>
    <string name="recentCalls_trashVoicemail">Delete voicemail</string>
    <string name="recentCalls_shareVoicemail">Share voicemail</string>
    <string name="recentCalls_empty">Call log is empty.</string>
    <string name="clearCallLogConfirmation_title">Clear call log?</string>
    <string name="clearCallLogConfirmation">All your call records will be deleted.</string>
    <string name="clearCallLogProgress_title">Clearing call log\u2026</string>
    <string name="clearFrequentsConfirmation_title">Clear frequently contacted?</string>
    <string name="clearFrequentsConfirmation">You\'ll clear the frequently contacted list in the People and Phone apps, and force email apps to learn your addressing preferences from scratch.</string>
    <string name="clearFrequentsProgress_title">Clearing frequently contacted\u2026</string>
    <string name="imei">IMEI</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_clear_frequents">Clear frequents</string>
    <string name="menu_contacts_filter">Contacts to display</string>
    <string name="menu_import_export">Import/export</string>
    <string name="search_bar_hint">Search contacts</string>
    <string name="menu_settings" msgid="377929915873428211">Settings</string>
    <string name="menu_help">Help</string>
    <string name="user_profile_contacts_list_header" msgid="9154761216179882405">Me</string>
    <string name="noMember">No member in this group.</string>
    <string name="button_delete">Remove</string>
    <string name="button_cancel">Cancel</string>
    <string name="select_all">All</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="menu_export_database">Export database files</string>
	<string name="last_call_duration">Last call duration:</string>
	<string name="incoming_calls_duration">Incoming calls duration:</string>
	<string name="outgoing_calls_duration">Outgoing calls duration:</string>
	<string name="all_calls_duration">All calls duration:</string>
    <string name="menu_auto_sync_to_baidu_cloud">Auto sync to Baidu Yun</string>
    <string name="menu_sync_to_baidu_cloud">Sync to Baidu Yun Now</string>
	<string name="menu_memory_status">Memory status</string>
</resources>