<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!--
  BORQS Software Solutions Pvt Ltd. CONFIDENTIAL
  Copyright (c) 2016 All rights reserved.

  The source code contained or described herein and all documents
  related to the source code ("Material") are owned by BORQS Software
  Solutions Pvt Ltd. No part of the Material may be used,copied,
  reproduced, modified, published, uploaded,posted, transmitted,
  distributed, or disclosed in any way without BORQS Software
  Solutions Pvt Ltd. prior written permission.

  No license under any patent, copyright, trade secret or other
  intellectual property right is granted to or conferred upon you
  by disclosure or delivery of the Materials, either expressly, by
  implication, inducement, estoppel or otherwise. Any license
  under such intellectual property rights must be express and
  approved by BORQS Software Solutions Pvt Ltd. in writing.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_me_profile"
        android:title="@string/user_profile_contacts_list_header"/>

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_dk"
        android:title="@string/menu_search"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_add_contact"
        android:icon="@drawable/ic_add_person_dk"
        android:title="@string/menu_new_contact_action_bar"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_switch_group"
        android:icon="@drawable/ic_add_group_holo_dark"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_add_group"
        android:icon="@drawable/ic_add_group_dk"
        android:title="@string/menu_new_group_action_bar"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_scan"
        android:title="@string/menu_scan" />

    <item
        android:id="@+id/menu_delete"
        android:title="@string/menu_deleteContact" />

     <item
        android:id="@+id/menu_cloud"
        android:title="@string/menu_cloud" />

    <item
        android:id="@+id/menu_contacts_filter"
        android:title="@string/menu_contacts_filter" />

    <item
        android:id="@+id/menu_auto_sync_to_baidu_cloud"
        android:title="@string/menu_auto_sync_to_baidu_cloud"
        android:checkable="true"/>
    <item
        android:id="@+id/menu_sync_to_baidu_cloud"
        android:title="@string/menu_sync_to_baidu_cloud" />

    <item
        android:id="@+id/menu_import_export"
        android:title="@string/menu_import_export" />

    <item
        android:id="@+id/menu_clear_frequents"
        android:title="@string/menu_clear_frequents" />

    <item
        android:id="@+id/menu_accounts"
        android:title="@string/menu_accounts" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings" />

    <item
        android:id="@+id/menu_memory_status"
        android:title="@string/menu_memory_status" />

    <item
        android:id="@+id/menu_help"
        android:title="@string/menu_help" />

    <item
        android:id="@+id/export_database"
        android:title="@string/menu_export_database"
        android:visible="false"
        android:showAsAction="never" />

    <item
        android:id="@+id/menu_contacts_photo_update"
        android:title="@string/menu_contacts_photo_update" />

    <item
        android:id="@+id/menu_select"
        android:title="@string/menu_select"/>
</menu>
